[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-audio-downloader"
version = "1.0.0"
description = "Bulk YouTube audio downloader with resume and skip duplicate support"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "YouTube Audio Downloader", email = "support@example.com" }]
license = { text = "MIT" }
keywords = ["youtube", "audio", "download", "mp3"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "yt-dlp>=2024.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.urls]
Homepage = "https://github.com/yourusername/youtube-audio-downloader"
Repository = "https://github.com/yourusername/youtube-audio-downloader.git"
Issues = "https://github.com/yourusername/youtube-audio-downloader/issues"
